[package]
name = "expr-changelog-generation"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
git2 = "0.19.0"
log = "0.4.22"
custom_logger = { version = "0.3.0", git = "https://github.com/winksaville/custom_logger" }
octocrab = "0.42.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
octocrate = { version = "2.0.1", features = ["full"] }
